--- a/web/index.html
+++ b/web/index.html
@@ -478,7 +478,7 @@
             <div class="tech-detail tech-detail-3"></div>
             
             <div class="title-container">
-                <h1 class="title">BudakBaog</h1>
+                <h1 class="title">BudakBaong</h1>
                 <p class="subtitle">Advanced V2ray Generator</p>
             </div>
             
