--- a/web/sub.html
+++ b/web/sub.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INCONIGTO-MODE || Subscription</title>
+    <title>BudakBaong || Subscription</title>
     
     <!-- Favicon -->
     <link rel="icon" href="https://raw.githubusercontent.com/AFRcloud/BG/main/icons8-film-noir-80.png"/>
@@ -175,7 +175,7 @@
         <div class="circuit-dot circuit-dot-3"></div>
         <div class="circuit-dot circuit-dot-4"></div>
         
-        <div class="footer-logo">INCONIGTO-MODE</div>
+        <div class="footer-logo">BudakBaong</div>
         <div class="footer-powered">POWERED BY SECURE TECHNOLOGY</div>
         <div class="footer-social">
             <a href="https://t.me/Noir7R" class="social-link" target="_blank">
